Use site.baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 lsi: true
 permalink: pretty
+baseurl: http://steakandscot.ch/texas-straight-talk/
+destination: /srv/http/steakandscot.ch/htdocs/texas-straight-talk
+markdown: kramdown
